--- a/css/main.css
+++ b/css/main.css
@@ -48,7 +48,7 @@ nav .nav-right-section img{
 }
 
 main{
-    margin-top: 150px;
+    margin-top: 109px;
     text-align: center;
 }
 main .main-logo{
@@ -104,3 +104,27 @@ main .main-input .micro-icon{
     cursor: pointer;
 }
 
+main .main-buttons{
+    width: 530px;
+    margin: 0 auto;
+}
+
+main .main-buttons div{
+    display: inline-block;
+}
+
+main .main-buttons button{
+    height: 36px;
+    background-color: #f2f2f2f2;
+    border: none;
+    font-size: 14px;;
+    color: #5f6368;
+    border-radius:5px;
+    padding: 0 16px;
+    margin: 11px 4px;
+}
+main .main-buttons button:hover{
+    border: 1px solid #c6c6c6c6;
+    box-shadow: 0 1px 1px rgba(0,0,0,0.1);
+    color: #222;
+}
