--- a/css/main.css
+++ b/css/main.css
@@ -128,3 +128,7 @@ main .main-buttons button:hover{
     box-shadow: 0 1px 1px rgba(0,0,0,0.1);
     color: #222;
 }
+
+.ubicacion{
+    border-bottom: 1px solid #e4e4e4;
+}
