--- a/css/main.css
+++ b/css/main.css
@@ -132,3 +132,46 @@ main .main-buttons button:hover{
 .ubicacion{
     border-bottom: 1px solid #e4e4e4;
 }
+
+footer{
+    width: 100%;
+    height: 80px;
+    position: absolute;
+    bottom: 0;
+    background-color: #f2f2f2;
+
+}
+
+footer .grid{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+
+    align-items: center;
+    font-size: 13px;
+    background: #f2f2f2;
+}
+
+footer ul{
+    margin: 10px;
+    display: flex;
+    list-style: none;
+    padding-left: 0;
+}
+
+footer .footer-left{
+    justify-self: left;
+}
+
+footer .footer-right{
+    justify-self: right;
+}
+
+footer ul li a{
+    margin: 10px;
+    color: #5f6368;
+}
+
+footer .ubicacion p{
+    margin-left: 20px;
+    color: rgba(0,0,0,.54);
+}
